# mashgin

./: .env.test  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
api/: .env.local  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
api/app/: const.py  main.py
api/app/infrastructure/: orm_base.py
api/app/models/: base.py  restaurant_models.py
api/app/repository/: category_repository.py  order_repository.py  payment_repository.py  product_repository.py
api/app/router/: menu_router.py  order_router.py
api/app/services/: menu_service.py  order_service.py  product_service.py
api/migrations/: env.py
api/migrations/versions/: 2023_07_30_0525-85bd7c34fbf3_.py  2023_07_30_1658-a600790df447_.py  2023_08_03_0136-3389898a3e9d_.py
api/tests/repository/: test_category_repository.py
api/tests/router/: test_health_route.py
api/tests/services/: test_menu_service.py
app/: const.py  main.py  settings.py
app/infrastructure/: logger.py
app/models/: __init__.py  restaurant_models.py
app/repository/: category_repository.py  menu_repository.py  order_repository.py  payment_repository.py  product_repository.py
app/router/: menu_router.py  order_router.py
app/services/: menu_service.py  order_service.py  product_service.py
front-end/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
front-end/src/: App.tsx  main.js
front-end/src/api/: api.ts
migrations/: env.py
migrations/versions/: 2023_07_31_1842-df0b4c4a7c43_.py
resources/: populate_database.sh
(+29 files in other folders)
